--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,4 +5,8 @@ services:
       context: ./api
       network: host
     ports:
-    - "8080:8080"
+    - "${API_SERVER_PORT}:8080"
+    environment:
+      - SERVER_PORT=8080
+      - MONGO_DB_PORT=${MONGO_DB_PORT}
+      - MONGO_DB_HOST=${MONGO_DB_HOST}
