--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,6 @@
 API_SERVER_PORT=8080
-# MongoDB connection/credentials
-MONGO_DB_PORT=12701
-MONGO_DB_HOST=
+# MongoDB connection credentials
+MONGO_DB_HOST=""
+MONGO_DB_PWD=""
+MONGO_DB_CLUSTER=""
+MONGO_DB_NAME=""
