--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,10 +5,16 @@ services:
       context: ./api
       network: host
     ports:
-    - "${API_SERVER_PORT}:8080"
+      - "${API_SERVER_PORT}:8080"
     environment:
       - SERVER_PORT=8080
-      - MONGO_DB_PORT=${MONGO_DB_PORT}
       - MONGO_DB_HOST=${MONGO_DB_HOST}
       - MONGO_DB_PWD=${MONGO_DB_PWD}
-      - MONGO_DB_CA=${MONGO_DB_CA}
+      - MONGO_DB_CLUSTER=${MONGO_DB_CLUSTER}
+      - MONGO_DB_NAME=${MONGO_DB_NAME}
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost/api/v1/health"]
+      interval: 1m30s
+      timeout: 10s
+      retries: 3
+      start_period: 40s
