feat: add automated Transact API authentication

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,10 @@ MONGO_DB_HOST=""
 MONGO_DB_PWD=""
 MONGO_DB_CLUSTER=""
 MONGO_DB_NAME=""
+# Transact API connection credentials/parameters
+TRANSACT_BASE_URL="https://qpc.transactcampus.com"
+TRANSACT_TENANT="gatech"
+TRANSACT_USERNAME=""
+TRANSACT_PASSWORD=""
+TRANSACT_FETCH_PERIOD="10m"
+TRANSACT_RELOAD_SESSION_PERIOD="4h"
