--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,12 @@ services:
       - MONGO_DB_PWD=${MONGO_DB_PWD}
       - MONGO_DB_CLUSTER=${MONGO_DB_CLUSTER}
       - MONGO_DB_NAME=${MONGO_DB_NAME}
+      - TRANSACT_BASE_URL=${TRANSACT_BASE_URL}
+      - TRANSACT_TENANT=${TRANSACT_TENANT}
+      - TRANSACT_USERNAME=${TRANSACT_USERNAME}
+      - TRANSACT_PASSWORD=${TRANSACT_PASSWORD}
+      - TRANSACT_FETCH_PERIOD=${TRANSACT_FETCH_PERIOD}
+      - TRANSACT_RELOAD_SESSION_PERIOD=${TRANSACT_RELOAD_SESSION_PERIOD}
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost/api/v1/health"]
       interval: 1m30s
