feat: implement Transact product fetching/caching

--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,4 @@ TRANSACT_USERNAME=""
 TRANSACT_PASSWORD=""
 TRANSACT_FETCH_PERIOD="10m"
 TRANSACT_RELOAD_SESSION_PERIOD="4h"
+TRANSACT_PRODUCT_CLASS_NAME="Klemis Pantry"
