--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,7 @@ services:
       - TRANSACT_PASSWORD=${TRANSACT_PASSWORD}
       - TRANSACT_FETCH_PERIOD=${TRANSACT_FETCH_PERIOD}
       - TRANSACT_RELOAD_SESSION_PERIOD=${TRANSACT_RELOAD_SESSION_PERIOD}
+      - TRANSACT_PRODUCT_CLASS_NAME=${TRANSACT_PRODUCT_CLASS_NAME}
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost/api/v1/health"]
       interval: 1m30s
