--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,14 @@
 API_SERVER_PORT=8080
 # MongoDB connection credentials
-MONGO_DB_HOST=""
-MONGO_DB_PWD=""
-MONGO_DB_CLUSTER=""
-MONGO_DB_NAME=""
+MONGO_DB_HOST=
+MONGO_DB_PWD=
+MONGO_DB_CLUSTER=
+MONGO_DB_NAME=
 # Transact API connection credentials/parameters
-TRANSACT_BASE_URL="https://qpc.transactcampus.com"
-TRANSACT_TENANT="gatech"
-TRANSACT_USERNAME=""
-TRANSACT_PASSWORD=""
-TRANSACT_FETCH_PERIOD="10m"
-TRANSACT_RELOAD_SESSION_PERIOD="4h"
-TRANSACT_PRODUCT_CLASS_NAME="Klemis Pantry"
+TRANSACT_BASE_URL=https://qpc.transactcampus.com
+TRANSACT_TENANT=gatech
+TRANSACT_USERNAME=
+TRANSACT_PASSWORD=
+TRANSACT_FETCH_PERIOD=10m
+TRANSACT_RELOAD_SESSION_PERIOD=30m
+TRANSACT_PRODUCT_CLASS_NAME=Klemis Pantry
