chore: add server url to env

--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,5 @@ TRANSACT_PASSWORD=
 TRANSACT_FETCH_PERIOD=10m
 TRANSACT_RELOAD_SESSION_PERIOD=30m
 TRANSACT_PRODUCT_CLASS_NAME=Klemis Pantry
+# CAS login arguments
+CAS_SERVER_URL=https://login.gatech.edu/cas/
