--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,9 @@
 API_SERVER_PORT=8080
+API_SERVER_DOMAIN=
+# Authentication parameters
+AUTH_SECURE_CONTINUATION=0
+AUTH_REDIRECT_URI_PREFIXES=
+AUTH_JWT_SECRET=secret
 # MongoDB connection credentials
 MONGO_DB_HOST=
 MONGO_DB_PWD=
