feat: add authenticated routes

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,8 @@ API_SERVER_DOMAIN=
 AUTH_SECURE_CONTINUATION=0
 AUTH_REDIRECT_URI_PREFIXES=
 AUTH_JWT_SECRET=secret
+AUTH_JWT_TOKEN_EXPIRES_AFTER=
+AUTH_BYPASS=0
 # MongoDB connection credentials
 MONGO_DB_HOST=
 MONGO_DB_PWD=
