--- a/.env.example
+++ b/.env.example
@@ -23,8 +23,8 @@ TRANSACT_PRODUCT_CLASS_NAME=Klemis Pantry
 CAS_SERVER_URL=https://login.gatech.edu/cas/
 # Upload credentials/parameters
 UPLOAD_MAX_SIZE=4GB
-UPLOAD_AWS_REGION=
-UPLOAD_API_ACCESS_KEY_ID=
+UPLOAD_AWS_REGION=us-east-1
+UPLOAD_AWS_ACCESS_KEY_ID=
 UPLOAD_AWS_SECRET_ACCESS_KEY=
-UPLOAD_PART_SIZE=32KB
-UPLOAD_S3_BUCKET=product-images
+UPLOAD_PART_SIZE=6MB
+UPLOAD_S3_BUCKET=klemis-product-images
