fix: solve bugs in scraping logic

--- a/.env.example
+++ b/.env.example
@@ -25,6 +25,7 @@ TRANSACT_CSV_REPORT_NAME_COLUMN_OFFSET=10
 TRANSACT_CSV_REPORT_QTY_COLUMN_OFFSET=13
 # The space at the end of this is intentional
 TRANSACT_PROFIT_CENTER_PREFIX=Profit Center - 
+TRANSACT_CSV_REPORT_TYPE=qpsview_reports_schedules:#QPWebOffice.Web
 # CAS login arguments
 CAS_SERVER_URL=https://login.gatech.edu/cas/
 # Upload credentials/parameters
