add more stuff to terraform

--- a/.env.example
+++ b/.env.example
@@ -6,10 +6,10 @@ AUTH_JWT_SECRET=secret
 AUTH_JWT_TOKEN_EXPIRES_AFTER=
 AUTH_BYPASS=1
 # MongoDB connection credentials
-MONGO_DB_HOST=
-MONGO_DB_PWD=
-MONGO_DB_CLUSTER=
-MONGO_DB_NAME=
+MONGO_DB_USERNAME=
+MONGO_DB_PASSWORD=
+MONGO_DB_CLUSTER_NAME=
+MONGO_DB_DATABASE_NAME=
 # Transact API connection credentials/parameters
 TRANSACT_BASE_URL=https://qpc.transactcampus.com
 TRANSACT_TENANT=gatech
