add some documentation

--- a/aws/bundle-include/.ebextensions/030_grant_executable_permissions.config
+++ b/aws/bundle-include/.ebextensions/030_grant_executable_permissions.config
@@ -1,3 +1,6 @@
+# This file was created based on this tutorial:
+# https://medium.com/edataconsulting/how-to-get-a-ssl-certificate-running-in-aws-elastic-beanstalk-using-certbot-6daa9baa3997
+
 container_commands:
     010_permission_hook:
         command: "chmod +x .platform/hooks/postdeploy/010_get_certificate.sh"
