--- a/aws/bundle-include/.ebextensions/020_open_https_port.config
+++ b/aws/bundle-include/.ebextensions/020_open_https_port.config
@@ -1,3 +1,6 @@
+# This file was created based on this tutorial:
+# https://medium.com/edataconsulting/how-to-get-a-ssl-certificate-running-in-aws-elastic-beanstalk-using-certbot-6daa9baa3997
+
 Resources:
     sslSecurityGroupIngress:
         Type: AWS::EC2::SecurityGroupIngress
