add some more documentation, re-add dockerfile

--- a/.env.example
+++ b/.env.example
@@ -1,37 +1,95 @@
+# Website parameters
+# ==================
+# The domain that the API server expects to be reachable at
+# (affects cookie scopes)
 API_SERVER_DOMAIN=
+
 # Authentication parameters
+# =========================
+# Whether the flow continuation cookies used between redirects should be secure (HTTPS-only)
 AUTH_SECURE_CONTINUATION=0
+# List of prefixes to match authentication redirect URIs against (should include the admin dashboard).
+# If empty, then all URIs are allowed.
 AUTH_REDIRECT_URI_PREFIXES=
+# The (base64-encoded) encryption secret used for signing JWTs (should be between 128 and 512 bits)
 AUTH_JWT_SECRET=secret
+# The number of hours after which to expire JWTs (and require re-authentication). Empty disables expiration
 AUTH_JWT_TOKEN_EXPIRES_AFTER=
+# Whether to disable authentication completely. Do not run this in production!
 AUTH_BYPASS=1
+
 # MongoDB connection credentials
+# ==============================
+# The username for a MongoDB Atlas account that can access the API's database instance
 MONGO_DB_USERNAME=
+# The password for a MongoDB Atlas account that can access the API's database instance
 MONGO_DB_PASSWORD=
+# The name of the MongoDB Atlas cluster that the app is running on
 MONGO_DB_CLUSTER_NAME=
+# The name of the MongoDB database (collection of collections) that all of the API's collections should reside in
 MONGO_DB_DATABASE_NAME=
+
 # Transact API connection credentials/parameters
-TRANSACT_BASE_URL=https://qpc.transactcampus.com
+# ==============================================
+# The base URL of the Transact API to retrieve inventory data from
+TRANSACT_BASE_URL="https://qpc.transactcampus.com"
+# The 'tenant' in Transact to that the API should authenticate against and download inventory for
 TRANSACT_TENANT=gatech
+# The username for a Transact account that can access and execute favorite reports to obtain inventory data
 TRANSACT_USERNAME=
+# The password for a Transact account that can access and execute favorite reports to obtain inventory data
 TRANSACT_PASSWORD=
+# The period to wait between fetches of the current inventory.
+# This affects data liveness served by the API as well as the load induced on Transact
 TRANSACT_FETCH_PERIOD=10m
+# The period to wait between 'reloading' the Transact session (simulating logging out and back in again)
 TRANSACT_RELOAD_SESSION_PERIOD=30m
-TRANSACT_CSV_FAVORITE_REPORT_NAME=Klemis Inventory CSV
+# The name of the favorite report created in Transact
+# that should be based on 'Item List with Inventory Details' and output CSV
+TRANSACT_CSV_FAVORITE_REPORT_NAME="Klemis Inventory CSV"
+# The period to wait between seeing if a newly-requested report is ready to download
 TRANSACT_REPORT_POLL_PERIOD=10s
+# The period to wait before giving up on a requested report after which it errors
 TRANSACT_REPORT_POLL_TIMEOUT=5m
+# The 0-based offset for the cell that the product's name exists in,
+# relative to the cell that indicates the profit center
 TRANSACT_CSV_REPORT_ID_COLUMN_OFFSET=9
+# The 0-based offset for the cell that the product's ID exists in,
+# relative to the cell that indicates the profit center
 TRANSACT_CSV_REPORT_NAME_COLUMN_OFFSET=10
+# The 0-based offset for the cell that the product's current quantity exists in,
+# relative to the cell that indicates the profit center
 TRANSACT_CSV_REPORT_QTY_COLUMN_OFFSET=13
-# The space at the end of this is intentional
-TRANSACT_PROFIT_CENTER_PREFIX=Profit Center - 
-TRANSACT_CSV_REPORT_TYPE=qpsview_reports_schedules:#QPWebOffice.Web
-# CAS login arguments
-CAS_SERVER_URL=https://login.gatech.edu/cas/
+# The prefix that exists in each cell that also contains the profit center.
+# For example, 'Profit Center -' matches cells with the contents:
+# - 'Profit Center - Pantry A'
+#    (which turns into the profit center name 'Pantry A')
+# - 'Profit Centry - Location 002'
+#    (which turns into the profit center name 'Location 002')
+TRANSACT_PROFIT_CENTER_PREFIX="Profit Center -"
+# The expected '__type' field of the report that the scraper searches for.
+# This is an internal value in the Transact API
+TRANSACT_CSV_REPORT_TYPE="qpsview_reports_schedules:#QPWebOffice.Web"
+
+# Single-sign-on parameters
+# =========================
+# The base URL (including the trailing '/cas/')
+# for the CAS (single-sign-on) server that is used to authenticate users.
+# The API uses CAS protocol version 2 to implement communication with the SSO provider:
+# https://apereo.github.io/cas/5.1.x/protocol/CAS-Protocol-V2-Specification.html
+CAS_SERVER_URL="https://login.gatech.edu/cas/"
+
 # Upload credentials/parameters
+# =============================
+# The max size of files that can be uploaded using the API to S3
 UPLOAD_MAX_SIZE=4GB
-UPLOAD_AWS_REGION=us-east-1
+# The AWS region that the bucket should exist in
+UPLOAD_AWS_REGION="us-east-1"
+# The AWS access key ID to use when uploading files to S3
 UPLOAD_AWS_ACCESS_KEY_ID=
+# The AWS secret access key to use when uploading files to S3
 UPLOAD_AWS_SECRET_ACCESS_KEY=
+# The size of chunks to use when uploading files to S3
 UPLOAD_PART_SIZE=6MB
+# The name of the S3 bucket to upload files to
 UPLOAD_S3_BUCKET=klemis-product-images
